--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
   <body>
     <div id="app"></div>
   </body>
-	<script type="text/javascript" src="./bundle.js"></script>
+	<!--<script type="text/javascript" src="./bundle.js"></script>-->
 </html>
