--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <link href="" rel="stylesheet">
 </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
-	<!--<script type="text/javascript" src="./bundle.js"></script>-->
 </html>
